test/sema/exercise/struct_in_condition.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}
struct S2 {}

fn main(): unit {
  let x = S {};

  if x {}
  // CHECK: [[# @LINE - 1 ]]:6: error: expected number in condition

  while x {}
  // CHECK: [[# @LINE - 1 ]]:9: error: expected number in condition
}
